update the new feature for interest capture

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,10 @@ NEXT_PUBLIC_TODAY_FALLBACK_URL="https://makinglifeeasie.com/today"
 # Supported regions for join flows (comma-separated ISO-2)
 NEXT_PUBLIC_SUPPORTED_COUNTRIES="NZ,SG"
 
+# Supabase project (for approved RPC calls)
+NEXT_PUBLIC_SUPABASE_URL="https://<project-ref>.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="<public-anon-key>"
+
 # ----------------------------
 # Edge Function endpoints
 # (Public URL, but controlled server-side)
