--- a/.env.example
+++ b/.env.example
@@ -4,41 +4,24 @@
 # Do NOT commit .env.local.
 # --------------------------------------------------
 
+NEXT_PUBLIC_ENV="dev"
+
 # ----------------------------
 # Public configuration
-# Safe to expose to the browser
 # ----------------------------
-
-# iOS App Store link for Kinly
 NEXT_PUBLIC_IOS_STORE_URL="https://apps.apple.com/app/idXXXXXXXXX"
-
-# Google Play Store link for Kinly
 NEXT_PUBLIC_ANDROID_STORE_URL="https://play.google.com/store/apps/details?id=com.makinglifeeasie.kinly"
-
-# App deep link scheme (used when user taps "Open in Kinly")
 NEXT_PUBLIC_APP_DEEP_LINK_SCHEME="kinly://"
-
-# Web fallback if routing fails or app not installed
 NEXT_PUBLIC_TODAY_FALLBACK_URL="https://makinglifeeasie.com/today"
-
-# Supported regions for join flows (comma-separated ISO-2)
 NEXT_PUBLIC_SUPPORTED_COUNTRIES="NZ,SG"
 
-# Supabase project (for approved RPC calls)
-NEXT_PUBLIC_SUPABASE_URL="https://<project-ref>.supabase.co"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="<public-anon-key>"
+# ----------------------------
+# Supabase (DEV by default)
+# ----------------------------
+NEXT_PUBLIC_SUPABASE_URL="https://<dev-project-ref>.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="<dev-public-anon-key>"
 
 # ----------------------------
-# Edge Function endpoints
-# (Public URL, but controlled server-side)
+# Feature flags
 # ----------------------------
-
-# Supabase Edge Function to record interest
-NEXT_PUBLIC_SUPABASE_FUNCTION_REGION_INTEREST_URL="https://<project-ref>.functions.supabase.co/region-interest"
-
-# ----------------------------
-# Feature flags (optional)
-# ----------------------------
-
-# Enable public house norms pages
 NEXT_PUBLIC_ENABLE_PUBLIC_NORMS="true"
