--- a/.github/workflows/ci-kinly-web.yml
+++ b/.github/workflows/ci-kinly-web.yml
@@ -24,6 +24,24 @@ jobs:
       CI: true
       NEXT_TELEMETRY_DISABLED: "1"
 
+      # Always mark this job as non-production
+      NEXT_PUBLIC_ENV: "ci"
+
+      NEXT_PUBLIC_IOS_STORE_URL: "https://apps.apple.com/app/kinly/id6756508378"
+      NEXT_PUBLIC_ANDROID_STORE_URL: "https://play.google.com/store/apps/details?id=com.makinglifeeasie.kinly"
+      NEXT_PUBLIC_APP_DEEP_LINK_SCHEME: "kinly://"
+      NEXT_PUBLIC_TODAY_FALLBACK_URL: "https://makinglifeeasie.com/today"
+      NEXT_PUBLIC_SUPPORTED_COUNTRIES: "NZ,SG"
+      NEXT_PUBLIC_ENABLE_PUBLIC_NORMS: "true"
+
+      # ✅ Force CI to use DEV services only (set these in GitHub Actions secrets)
+      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL_DEV }}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY_DEV }}
+
+      # Optional: unique run id you can use in tests to generate unique emails
+      CI_RUN_ID: ${{ github.run_id }}
+      CI_ATTEMPT: ${{ github.run_attempt }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -98,7 +116,6 @@ jobs:
         if: steps.pw.outputs.installed == 'true'
         shell: bash
         env:
-          NEXT_PUBLIC_ENV: "ci"
           PLAYWRIGHT_BASE_URL: "http://127.0.0.1:3000"
         run: |
           set -euo pipefail
@@ -139,3 +156,12 @@ jobs:
             test-results
           if-no-files-found: ignore
           retention-days: 7
+
+      # ---- Vercel Deployment Checks ----
+      # This creates/updates a Vercel check named "Vercel - kinly-web: ci"
+      # so Vercel can gate promotion to production domains on your CI result.
+      - name: Notify Vercel (Deployment Checks)
+        if: always()
+        uses: vercel/repository-dispatch/actions/status@v1
+        with:
+          name: "Vercel - kinly-web: ci"
