--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
     "tokens:build": "style-dictionary build --config style-dictionary.config.mjs",
     "tokens:watch": "style-dictionary build --config style-dictionary.config.mjs --watch",
     "tokens:clean": "node -e \"require('fs').rmSync('app/styles/generated', { recursive: true, force: true })\"",
-
     "dev": "npm run tokens:build && next dev",
     "dev:tokens": "npm run tokens:watch",
     "dev:all": "npm run tokens:build && (npm run dev:tokens & next dev)",
-
     "build": "npm run tokens:build && next build",
     "start": "next start -p 3000",
-
     "lint": "eslint \"{app,components,lib,tests}/**/*.{js,jsx,ts,tsx}\" --max-warnings 0",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-
     "check:all": "node scripts/check_all.mjs",
     "check:contracts": "node scripts/check_contracts.mjs",
     "check:primitives": "node scripts/check_primitives.mjs",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "e2e:report": "playwright show-report"
@@ -34,12 +33,14 @@
     "@types/node": "25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^17.0.0",
     "style-dictionary": "^4.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.0"
+    "typescript-eslint": "^8.53.0",
+    "vitest": "^4.0.18"
   }
 }
