--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^17.0.0",
+    "jsdom": "^25.0.1",
     "style-dictionary": "^4.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.0",
