--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "^16.1.3",
+    "qrcode": "^1.5.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
@@ -31,7 +34,9 @@
     "@eslint/js": "^9.39.2",
     "@next/eslint-plugin-next": "^16.1.3",
     "@playwright/test": "^1.57.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "25.0.9",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@vitest/coverage-v8": "^4.0.18",
