--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "nanoid": "^5.1.6",
     "next": "^16.1.3",
     "qrcode": "^1.5.4",
     "react": "^19.2.3",
